2014-02-24  Max Polk  <maxpolk@gmail.com>

	* Populated README.md

2014-02-23  Max Polk  <maxpolk@gmail.com>

	* Moved from launchpad.net to github.com

	* Started the ChangeLog