@@ -1,0 +1,14 @@
+'''
+The interwiki engine module for Winter.
+
+This file is part of Winter, a wiki-based computing platform.
+Copyright (C) 2012,2014  Max Polk <maxpolk@gmail.com>
+License located at http://www.gnu.org/licenses/agpl-3.0.html
+'''
+
+class Interwiki ():
+    '''
+    A generic wiki agent, to read, write, query.
+    '''
+    def get (self, commands):
+        print "Interwiki instance: Not yet implemented"
