@@ -1,0 +1,8 @@
+'''
+This is the test package of Winter.  To run a full batter of tests
+you can use the script in the ../../bin directory.
+
+This file is part of Winter, a wiki-based computing platform.
+Copyright (C) 2012,2013,2014  Max Polk <maxpolk@gmail.com>
+License located at http://www.gnu.org/licenses/agpl-3.0.html
+'''
