@@ -1,0 +1,18 @@
+'''
+Script to run tests.
+
+This file is part of Winter, a wiki-based computing platform.
+Copyright (C) 2012,2014  Max Polk <maxpolk@gmail.com>
+License located at http://www.gnu.org/licenses/agpl-3.0.html
+'''
+
+import unittest
+
+import winter.cli
+
+class TestMetadata (unittest.TestCase):
+    def test_description (self):
+        assert len (winter.cli.long_description) > 0, 'invalid long_description'
+
+if __name__ == '__main__':
+    unittest.main ()
