@@ -1,3 +1,7 @@
+2014-02-25  Max Polk  <maxpolk@gmail.com>
+
+	* Added media directory, added initial file structure.
+
 2014-02-24  Max Polk  <maxpolk@gmail.com>
 
 	* Populated README.md
